--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "62069273",
+   "id": "2f755549",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6213f8cc",
+   "id": "1daf6313",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8578661b",
+   "id": "48ee189f",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ca3d557",
+   "id": "4660ee29",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec0b7da",
+   "id": "8c1e1c53",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f112126",
+   "id": "f97b1b7e",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f17f823",
+   "id": "5d159cb8",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc06227c",
+   "id": "6522f43f",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7183b503",
+   "id": "661fac80",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d561c22c",
+   "id": "35483557",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "36efc06d",
+   "id": "3ac0cfb1",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "73865092",
+   "id": "48c47c14",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b7eedcda",
+   "id": "2adbfa2e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "709ba271",
+   "id": "713ef2ce",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ba003c",
+   "id": "8e865e5e",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ac69de9a",
+   "id": "735f8bef",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcbe9a37",
+   "id": "9f8bad9d",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cf1abd13",
+   "id": "f48744cb",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8ff4cad3",
+   "id": "1d026780",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "049a14d2",
+   "id": "402a3f04",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6df4afeb",
+   "id": "a391e69b",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "57bd5bca",
+   "id": "69d2a5e2",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aa6e76be",
+   "id": "4c88a0ee",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a6e5beb5",
+   "id": "f805aa94",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f9b886",
+   "id": "508490a2",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "00b5d1f6",
+   "id": "61fe6891",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640d429e",
+   "id": "c3fdf538",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "119d2194",
+   "id": "9518982e",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295d5e19",
+   "id": "f688335c",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dbb57f34",
+   "id": "445e9bae",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3359f0ae",
+   "id": "c8cf2767",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c3aa1731",
+   "id": "689efe93",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5eed80a7",
+   "id": "57167e71",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e8e404",
+   "id": "8fce49ef",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6683d827",
+   "id": "8440f8c3",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90d2df1f",
+   "id": "be99bd0e",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c43e505f",
+   "id": "231fa960",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "36f9de8e",
+   "id": "9c5ac427",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f78e507",
+   "id": "39c28e65",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cfc89170",
+   "id": "d89dc413",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e3a942f4",
+   "id": "38cddea6",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "01351105",
+   "id": "a5ba5357",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "946bea56",
+   "id": "cf3c3723",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3e7a9140",
+   "id": "c38a4135",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "469031cd",
+   "id": "a75c26d1",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "10ab0505",
+   "id": "b31623c3",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c9011747",
+   "id": "c2d4c2bc",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a18fba4",
+   "id": "d65bea78",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2a29a298",
+   "id": "b378cdac",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "decfd103",
+   "id": "83d6ca02",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c4ad36e6",
+   "id": "02b9709d",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5c0ebd64",
+   "id": "58f4f397",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9e45f741",
+   "id": "6623351b",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b6f7f1",
+   "id": "59840267",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fba0b324",
+   "id": "ff69d44d",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af80f47e",
+   "id": "48d94b86",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41801589",
+   "id": "59fe4de8",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "70a2f901",
+   "id": "9de65066",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc50db8",
+   "id": "a4ff292a",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1492dbb0",
+   "id": "1a7613d8",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f45de37d",
+   "id": "6ad2dfd0",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42750257",
+   "id": "895d4b3a",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "465149f7",
+   "id": "cbdb60a2",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e208fee5",
+   "id": "a618785a",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9d842f",
+   "id": "69e92dc2",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9f00cf06",
+   "id": "b1187df5",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "09538d0b",
+   "id": "1e82b090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "1eae1ec1",
+   "id": "b41dc337",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8ac4b84e",
+   "id": "0b6bfef7",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "359fe97d",
+   "id": "db329602",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ce8656",
+   "id": "c5d9c7da",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "1d1be16e",
+   "id": "1b05065a",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3e784ad5",
+   "id": "6bed9ef6",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7b36814c",
+   "id": "2441f3a0",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6823fb65",
+   "id": "41b082b4",
    "metadata": {},
    "source": [
     "# The `not` logical operator\n",
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9946c9aa",
+   "id": "66c01415",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "fd3efadd",
+   "id": "3d68ce8e",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4487e3a9",
+   "id": "7c396c16",
    "metadata": {},
    "source": [
     "# Numbers\n",
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3bcef2bd",
+   "id": "fbb0207c",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "bbb2d094",
+   "id": "9ccad69e",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6dc0afb3",
+   "id": "fc0ff672",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "31cf3c45",
+   "id": "9383bbf3",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "9c79a464",
+   "id": "8718154d",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "40bd0665",
+   "id": "fd6aac69",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "bb415076",
+   "id": "744df727",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2566ddac",
+   "id": "837dc95d",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "7177310e",
+   "id": "03bf7722",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "478e5a9c",
+   "id": "c505ba27",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b8640ff8",
+   "id": "8e21a2ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d9882632",
+   "id": "5b6818c2",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "a90c40ec",
+   "id": "ac85f284",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "6c9cd33e",
+   "id": "aa1ae4c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ad15cd6b",
+   "id": "f167dba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "86a779e6",
+   "id": "c5251f7c",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1b874bfb",
+   "id": "3b811e60",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "36a1d5d4",
+   "id": "62ca3523",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "baf1eacf",
+   "id": "debbe509",
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231d8940",
+   "id": "0f5020b9",
    "metadata": {},
    "source": [
     "# Exercise: Guessing game\n",
@@ -2077,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "8cf38f65",
+   "id": "a525678e",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2d5113ab",
+   "id": "84d649c8",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "16f70cc0",
+   "id": "ef2f8198",
    "metadata": {},
    "outputs": [
     {
@@ -2150,11 +2150,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f9c364",
+   "id": "1e73ac6b",
    "metadata": {},
    "source": [
-    "# "
+    "# Next up\n",
+    "\n",
+    "1. Floats\n",
+    "2. Strings\n",
+    "3. Methods vs. functions\n",
+    "\n",
+    "Resume at :35"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02a8078d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
