--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e2e35898",
+   "id": "e306b554",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "821bf28e",
+   "id": "8d92b09d",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "9a77681e",
+   "id": "25560986",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
    "source": [
     "x = 100\n",
     "print (x)\n",
-    "number = input('Enter the number: ')\n",
+    "number = input('Enter the numericl number: ')\n",
     "number = int(number)\n",
     "if number == x:\n",
     "    print('You got it!')\n",
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52fe7042",
+   "id": "e8a36057",
    "metadata": {},
    "outputs": [],
    "source": []
