--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e306b554",
+   "id": "e8c877b3",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8d92b09d",
+   "id": "0b93253b",
    "metadata": {},
    "outputs": [
     {
@@ -361,34 +361,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "25560986",
+   "execution_count": 90,
+   "id": "3f274890",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "Enter the number: \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[87], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m (x)\n\u001b[1;32m      3\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter the number: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m==\u001b[39m x:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou got it!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "This number is 100\n",
+      "Enter the numerical digit: 1\n",
+      "Too low!\n"
      ]
     }
    ],
    "source": [
     "x = 100\n",
-    "print (x)\n",
-    "number = input('Enter the numericl number: ')\n",
+    "print (f'This number is {x}')\n",
+    "number = input('Enter the numerical digit: ')\n",
     "number = int(number)\n",
     "if number == x:\n",
     "    print('You got it!')\n",
@@ -403,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a36057",
+   "id": "ee2dc047",
    "metadata": {},
    "outputs": [],
    "source": []
