--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e8c877b3",
+   "id": "13ca8e49",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0b93253b",
+   "id": "a0f090d8",
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "3f274890",
+   "execution_count": 93,
+   "id": "4fae789a",
    "metadata": {},
    "outputs": [
     {
@@ -370,8 +370,8 @@
      "output_type": "stream",
      "text": [
       "This number is 100\n",
-      "Enter the numerical digit: 1\n",
-      "Too low!\n"
+      "Enter the numerical digit: 100\n",
+      "You got it!\n"
      ]
     }
    ],
@@ -384,16 +384,14 @@
     "    print('You got it!')\n",
     "elif number < x:\n",
     "    print('Too low!')\n",
-    "elif number > x:\n",
-    "    print('Too high!')\n",
     "else:\n",
-    "    print('No more guesses')"
+    "    print('Too high!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee2dc047",
+   "id": "57b2f7ed",
    "metadata": {},
    "outputs": [],
    "source": []
