--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "13ca8e49",
+   "id": "65aec7d8",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a0f090d8",
+   "id": "c4e4a00d",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "4fae789a",
+   "id": "717c743c",
    "metadata": {},
    "outputs": [
     {
@@ -390,11 +390,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "ae9230cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 100\n",
+    "type (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "3a515800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 100.0\n",
+    "type (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "57b2f7ed",
+   "id": "ef88f47c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
